@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<root>some text</root>
