@@ -81,5 +81,7 @@ sub runtests {
     ###########################################################################
     $test->regression("empty (13)", "./test_node-13", "data/13.out");
     ###########################################################################
+    $test->regression("empty (14)", "./test_node-14", "data/14.out");
+    ###########################################################################
 }
 ###########################################################################
